--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "eslint": "^5.12.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-grid-gallery": "^0.5.2",
