--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "new",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http:/mikifriki.github.io/Fansite",
+  "homepage": "http://mikifriki.github.io/Fansite",
   "dependencies": {
     "eslint": "^5.12.0",
     "react": "^16.5.1",
